Moos Changelog

!	Security fix and improve
*	Common bug fix and improve
+	Feature add
-	Feature remove

1.6.2
=====
2014-MM-DD
* Fix MySQL logs rotate;
* Add SaltStack minion. According to user configure;
- Remove puppet;


1.6.1
=====
2014-11-12
* Fix group sa users' sudo privilege, add 'vi' command;


1.6.0
=====
2014-11-07
+ Support get software list and packages from local or file server.
  You could set package get mode by edit moss.conf.
  'local' -  Package list and all packages are stored in ./src direcotry and
             will be used by moss during installation;
  'remote' - Download package list and all packages from a remote file server;
+ Support change CentOS and EPEL to faster YUM source;
+ Add memcache and memcached;
+ Add SaltStack minion;
* Upgrade Nginx to version 1.6.2, and optimize compile parameter;
* Upgrade PHP to version 5.5.18 and optimize compile parameter;
* Upgrade KeepAlived to version 1.2.13;
* Upgrade MySQL to version 5.6.21;
* Upgrade Percona XtraBackup to version 2.2.5;
* Upgrade Redis to version 2.8.17;
* Upgrade Varnish to version 3.0.6;
* Upgrade OpenSSL to version 1.0.1j;
* Upgrade PCRE to version 8.36;
* Upgrade XCache to version 3.2.0;
* Upgrade Zabbix to version 2.4.1;
* Update NTP time servers;
* Support set SSH authentication method in moss.conf;
* Support control SSH root login in moss.conf;
* Prompt user when some configuration or files were not exist;
* Optimize netfilter ip_conntrack;
* Enhance Zabbix agent installation;
* Zabbix agent support Zabbix offical MySQL template;
* Fix MySQL database backup cron job;



1.5.0
=====
2014-05-31
! Add anti-ClickJacking HTTP header in Nginx configuration;
* Upgrade Redis to version 2.8.9;
* Upgrade PECL Redis to version 2.2.5;
* Upgrade MySQL server to version 5.6.17;
* Upgrade Percona-Xtrabackup to version 2.1.9;
* Add cache control HTTP header for PHP and static request in Nginx;
* Replace PECL APC PHP OPCode cache by XCache version 3.1.0;