@@ -21,21 +21,18 @@ yum install -y net-snmp-devel libcurl-devel OpenIPMI-devel sqlite-devel libssh2-
     compile
 
 ## for install config files
-    # useradd
-    id zabbix >/dev/null 2>&1 || useradd zabbix -u 1006
     # prepare directory
     mkdir -p /var/log/zabbix
-    chown -R zabbix:zabbix /var/log/zabbix
     mkdir -p ${INST_DIR}/${SRC_DIR}/share/zabbix/ssl/{certs,keys}
     mkdir -p ${INST_DIR}/${SRC_DIR}/share/zabbix/modules
     mkdir -p ${INST_DIR}/${SRC_DIR}/share/zabbix/{alertscripts,externalscripts}
     # conf
     install -m 0644 ${TOP_DIR}/conf/zabbix_agent/zabbix_agentd.conf ${INST_DIR}/${SRC_DIR}/etc/zabbix_agent.conf
     install -m 0644 ${TOP_DIR}/conf/zabbix_agent/zabbix_agentd.conf ${INST_DIR}/${SRC_DIR}/etc/zabbix_agentd.conf 
-    install -m 0600 ${TOP_DIR}/conf/zabbix_agent/mysql.conf ${INST_DIR}/${SRC_DIR}/etc/zabbix_agentd.conf.d/mysql.conf
-    install -m 0700 ${TOP_DIR}/conf/zabbix_agent/mysql.sh ${INST_DIR}/${SRC_DIR}/share/zabbix/externalscripts/mysql.sh
-    sed -i "s#^Hostname.*#Hostname=${OS_HOSTNAME}#" ${INST_DIR}/${SRC_DIR}/etc/zabbix_agent.conf
-    sed -i "s#^Hostname.*#Hostname=${OS_HOSTNAME}#" ${INST_DIR}/${SRC_DIR}/etc/zabbix_agentd.conf
+    install -m 0644 ${TOP_DIR}/conf/zabbix_agent/mysql.conf ${INST_DIR}/${SRC_DIR}/etc/zabbix_agentd.conf.d/mysql.conf
+    install -m 0644 ${TOP_DIR}/conf/zabbix_agent/mysql.conf ${INST_DIR}/${SRC_DIR}/etc/zabbix_agentd.conf.d/nginx.conf
+    install -m 0755 ${TOP_DIR}/conf/zabbix_agent/mysql.sh ${INST_DIR}/${SRC_DIR}/share/zabbix/externalscripts/mysql.sh
+    install -m 0755 ${TOP_DIR}/conf/zabbix_agent/mysql.sh ${INST_DIR}/${SRC_DIR}/share/zabbix/externalscripts/nginx.sh
     sed -i "s#^Server=.*#Server=$ZABBIX_SERVER_IP#" ${INST_DIR}/${SRC_DIR}/etc/zabbix_agent.conf
     sed -i "s#^Server=.*#Server=$ZABBIX_SERVER_IP#" ${INST_DIR}/${SRC_DIR}/etc/zabbix_agentd.conf
     sed -i "s#^ServerActive.*#ServerActive=$ZABBIX_SERVER_IP#" ${INST_DIR}/${SRC_DIR}/etc/zabbix_agent.conf
@@ -45,7 +42,6 @@ yum install -y net-snmp-devel libcurl-devel OpenIPMI-devel sqlite-devel libssh2-
     chkconfig --add zabbix_agentd
     chkconfig --level 3 zabbix_agentd on
     # chown
-    chown -R zabbix:zabbix ${INST_DIR}/${SRC_DIR}
     # start
     service zabbix_agentd start
     
