@@ -1,0 +1,7 @@
+UserParameter=nginx.accepts,/usr/local/zabbix/share/zabbix/externalscripts/nginx.sh accepts 
+UserParameter=nginx.handled,/usr/local/zabbix/share/zabbix/externalscripts/nginx.sh handled 
+UserParameter=nginx.requests,/usr/local/zabbix/share/zabbix/externalscripts/nginx.sh requests 
+UserParameter=nginx.connections.active,/usr/local/zabbix/share/zabbix/externalscripts/nginx.sh active 
+UserParameter=nginx.connections.reading,/usr/local/zabbix/share/zabbix/externalscripts/nginx.sh reading 
+UserParameter=nginx.connections.writing,/usr/local/zabbix/share/zabbix/externalscripts/nginx.sh writing 
+UserParameter=nginx.connections.waiting,/usr/local/zabbix/share/zabbix/externalscripts/nginx.sh waiting
