@@ -2,13 +2,13 @@ PidFile=/tmp/zabbix_agentd.pid
 LogFile=/var/log/zabbix/agentd.log
 LogFileSize=10
 DebugLevel=3
-EnableRemoteCommands=0
-LogRemoteCommands=0
-Server=0.0.0.0
+AllowRoot=1
+EnableRemoteCommands=1
+LogRemoteCommands=1
+Server=172.16.1.1
 ListenPort=10050
 StartAgents=3
-ServerActive=0.0.0.0
-Hostname=foo.com
+ServerActive=172.16.1.1
 Timeout=5
 Include=/usr/local/zabbix/etc/zabbix_agentd.conf.d/*.conf
 LoadModulePath=/usr/local/zabbix/share/zabbix/modules
